--- a/.github/workflows/port-to-upstream.yml
+++ b/.github/workflows/port-to-upstream.yml
@@ -18,6 +18,10 @@ permissions:
 jobs:
   port-to-upstream:
     runs-on: ubuntu-latest
+    # Run this job when a PR is labeled or manually triggered
+    if: |
+      (github.event_name == 'pull_request' && github.event.action == 'labeled' && github.event.label.name == 'port-to-upstream') ||
+      github.event_name == 'workflow_dispatch'
     steps:
       - name: Get secrets from Vault
         id: get-secrets
@@ -56,180 +60,142 @@ jobs:
           token: ${{ steps.app-token.outputs.token }}
           path: opentelemetry-ebpf-instrumentation
           
-      - name: Port PRs to upstream
+      - name: Port current PR to upstream
+        if: github.event_name == 'pull_request'
         env:
           GH_TOKEN: ${{ steps.app-token.outputs.token }}
         run: |
-          # Find all PRs with the port-to-upstream label
-          echo "Finding PRs with port-to-upstream label..."
-          LABELED_PRS=$(gh pr list --repo grafana/beyla --label "port-to-upstream" --json number,title,url --jq '.[].number')
+          # Get the current PR number
+          PR_NUM=${{ github.event.pull_request.number }}
           
-          if [ -z "$LABELED_PRS" ]; then
-            echo "No PRs found with port-to-upstream label."
+          echo "================================================================"
+          echo "Processing current PR #${PR_NUM}"
+          echo "================================================================"
+          
+          # Extract PR information
+          PR_TITLE="${{ github.event.pull_request.title }}"
+          PR_URL="${{ github.event.pull_request.html_url }}"
+          PR_BASE_BRANCH="${{ github.event.pull_request.base.ref }}"
+          
+          echo "PR Title: $PR_TITLE"
+          echo "PR URL: $PR_URL"
+          
+          # Create branch name for this port
+          BRANCH_NAME="port/${PR_NUM}-to-upstream"
+          
+          # Get the base and head SHAs
+          BASE_SHA="${{ github.event.pull_request.base.sha }}"
+          HEAD_SHA="${{ github.event.pull_request.head.sha }}"
+          
+          echo "PR Base SHA: $BASE_SHA"
+          echo "PR Head SHA: $HEAD_SHA"
+          
+          # Get the list of changed files excluding vendor and license files
+          CHANGED_FILES=$(git diff --name-only $BASE_SHA $HEAD_SHA | grep -v "vendor/" | grep -v "LICENSE" | grep -v "third_party_licenses.csv" || echo "")
+          
+          # Check if there are any relevant files to port
+          if [ -z "${CHANGED_FILES}" ]; then
+            echo "No relevant files changed in this PR. Nothing to port."
             exit 0
           fi
           
-          # Convert to array
-          PR_NUMBERS=($LABELED_PRS)
+          echo "Files to port:"
+          echo "${CHANGED_FILES}"
           
-          echo "Found PRs to process: ${PR_NUMBERS[@]}"
+          # Create a full diff excluding vendor files
+          git diff $BASE_SHA $HEAD_SHA -- ${CHANGED_FILES} > current-pr.patch
           
-          # Create a directory for reject files
-          mkdir -p reject_files
+          # Navigate to target repository
+          cd opentelemetry-ebpf-instrumentation
           
-          # Process each PR
-          for PR_NUM in "${PR_NUMBERS[@]}"; do
-            echo "================================================================"
-            echo "Processing PR #${PR_NUM}"
-            echo "================================================================"
+          # Create and checkout a branch
+          git checkout -b ${BRANCH_NAME} 2>/dev/null || git checkout ${BRANCH_NAME}
+          git reset --hard origin/main
+          
+          # Apply the patch with reject files
+          echo "Applying patch..."
+          git apply --whitespace=fix --reject ../current-pr.patch || true
+          
+          # Find reject files
+          REJ_FILES=$(find . -name "*.rej")
+          REJECTED=false
+          
+          # Handle reject files
+          if [ ! -z "$REJ_FILES" ]; then
+            REJECTED=true
+            echo "Reject files created:"
+            echo "$REJ_FILES"
             
-            # Try to fetch PR info, if it fails, skip this PR
-            if ! PR_INFO=$(gh pr view ${PR_NUM} --repo grafana/beyla --json title,url,baseRefName,headRefName,headRepositoryOwner,headRepository,state 2>/dev/null); then
-              echo "Could not fetch PR #${PR_NUM}. Skipping."
-              continue
-            fi
+            # Copy reject files to the rejects directory
+            mkdir -p ../reject_files/pr-${PR_NUM}
+            find . -name "*.rej" -exec cp --parents {} ../reject_files/pr-${PR_NUM}/ \;
             
-            # Extract PR information
-            PR_TITLE=$(echo "$PR_INFO" | jq -r '.title')
-            PR_URL=$(echo "$PR_INFO" | jq -r '.url')
-            PR_BASE_BRANCH=$(echo "$PR_INFO" | jq -r '.baseRefName')
-            PR_HEAD_BRANCH=$(echo "$PR_INFO" | jq -r '.headRefName')
-            PR_STATE=$(echo "$PR_INFO" | jq -r '.state')
+            # Remove reject files from the working directory
+            find . -name "*.rej" -exec rm {} \;
+          fi
+          
+          # Check if there are any changes to commit
+          if ! git diff --quiet || ! git diff --staged --quiet; then
+            # Add all changes
+            git add .
             
-            echo "PR Title: $PR_TITLE"
-            echo "PR URL: $PR_URL"
-            echo "PR State: $PR_STATE"
-            
-            # Skip closed PRs that are not merged
-            if [ "$PR_STATE" == "CLOSED" ]; then
-              echo "PR is closed. Skipping."
-              continue
-            fi
-            
-            # Create branch name for this port
-            BRANCH_NAME="port/${PR_NUM}-to-upstream"
-            
-            # Try to fetch the PR branch, continue if it fails
-            if ! git fetch origin pull/${PR_NUM}/head:pr-${PR_NUM} 2>/dev/null; then
-              echo "Could not fetch PR branch for #${PR_NUM}. Skipping."
-              continue
-            fi
-            
-            # Checkout the PR branch
-            git checkout pr-${PR_NUM}
-            
-            # Get the base and head SHAs
-            TARGET_BASE_SHA=$(git merge-base origin/${PR_BASE_BRANCH} pr-${PR_NUM})
-            TARGET_HEAD_SHA=$(git rev-parse HEAD)
-            
-            echo "PR Base SHA: $TARGET_BASE_SHA"
-            echo "PR Head SHA: $TARGET_HEAD_SHA"
-            
-            # Get the list of changed files excluding vendor and license files
-            CHANGED_FILES=$(git diff --name-only ${TARGET_BASE_SHA} ${TARGET_HEAD_SHA} | grep -v "vendor/" | grep -v "LICENSE" | grep -v "third_party_licenses.csv")
-            
-            # Check if there are any relevant files to port
-            if [ -z "${CHANGED_FILES}" ]; then
-              echo "No relevant files changed in PR #${PR_NUM}. Skipping."
-              continue
-            fi
-            
-            echo "Files to port:"
-            echo "${CHANGED_FILES}"
-            
-            # Create a full diff excluding vendor files
-            git diff ${TARGET_BASE_SHA} ${TARGET_HEAD_SHA} -- ${CHANGED_FILES} > pr-${PR_NUM}.patch
-            
-            # Filter out any binary files or files that might cause issues
-            grep -l "^Binary files" pr-${PR_NUM}.patch | xargs -r sed -i '/^Binary files/d' pr-${PR_NUM}.patch
-            
-            # Navigate to target repository
-            cd opentelemetry-ebpf-instrumentation
-            
-            # Try to create and checkout a branch, continue if it fails
-            if ! git checkout -b ${BRANCH_NAME} 2>/dev/null; then
-              echo "Branch ${BRANCH_NAME} already exists or could not be created. Trying to reset it."
-              if ! git checkout ${BRANCH_NAME} 2>/dev/null; then
-                echo "Could not checkout branch ${BRANCH_NAME}. Skipping."
-                cd ..
-                continue
-              fi
-              # Reset branch to match upstream main
-              git reset --hard origin/main
-            fi
-            
-            # Apply the patch with reject files
-            echo "Applying patch for PR #${PR_NUM}..."
-            git apply --whitespace=fix --reject ../pr-${PR_NUM}.patch || true
-            
-            # Find reject files
-            REJ_FILES=$(find . -name "*.rej")
-            REJECTED=false
-            
-            # Create a directory for this PR's rejects
-            if [ ! -z "$REJ_FILES" ]; then
-              REJECTED=true
-              echo "Reject files created for PR #${PR_NUM}:"
-              echo "$REJ_FILES"
-              
-              # Copy reject files to the rejects directory
-              mkdir -p ../reject_files/pr-${PR_NUM}
-              find . -name "*.rej" -exec cp --parents {} ../reject_files/pr-${PR_NUM}/ \;
-              
-              # Remove reject files from the working directory
-              find . -name "*.rej" -exec rm {} \;
-            fi
-            
-            # Check if there are any changes to commit
-            if ! git diff --quiet || ! git diff --staged --quiet; then
-              # Add all changes
-              git add .
-              
-              # Create commit message
-              COMMIT_MSG="[port] #${PR_NUM}: ${PR_TITLE}
+            # Create commit message
+            COMMIT_MSG="[port] #${PR_NUM}: ${PR_TITLE}
 
 Automated port of #${PR_NUM} from grafana/beyla.
 Original PR: ${PR_URL}"
 
-              # Add note about rejects if any
-              if [ "$REJECTED" = true ]; then
-                COMMIT_MSG+="
+            # Add note about rejects if any
+            if [ "$REJECTED" = true ]; then
+              COMMIT_MSG+="
 
 Note: Some changes couldn't be applied automatically and have been saved as reject files.
 Manual intervention is required to complete the port."
-              fi
-              
-              # Commit changes
-              git commit -m "$COMMIT_MSG"
-              
-              # Push branch to upstream
-              echo "Pushing branch ${BRANCH_NAME}..."
-              if ! git push origin ${BRANCH_NAME} --force; then
-                echo "Failed to push branch ${BRANCH_NAME}."
-              else
-                echo "Successfully pushed branch ${BRANCH_NAME}."
-              fi
-            else
-              echo "No changes to commit for PR #${PR_NUM}."
             fi
             
-            # Go back to Beyla repository
-            cd ..
-          done
-          
-          # Create a tar of all reject files
-          if [ "$(ls -A reject_files)" ]; then
-            echo "Creating archive of all reject files..."
-            tar -czf reject_files.tar.gz reject_files/
-            echo "Reject files archive created: reject_files.tar.gz"
+            # Commit changes
+            git commit -m "$COMMIT_MSG"
             
-            # Upload artifact in GitHub Actions
-            echo "To access the reject files, upload them as an artifact using:"
-            echo "- name: Upload Reject Files"
-            echo "  uses: actions/upload-artifact@v3"
-            echo "  with:"
-            echo "    name: reject-files"
-            echo "    path: reject_files.tar.gz"
+            # Push branch to upstream
+            echo "Pushing branch ${BRANCH_NAME}..."
+            git push origin ${BRANCH_NAME} --force
+            
+            echo "Successfully pushed branch ${BRANCH_NAME}."
           else
-            echo "No reject files were created."
+            echo "No changes to commit."
           fi
+          
+          # Report status
+          echo "================================================================"
+          echo "Port attempt completed for PR #${PR_NUM}"
+          echo "================================================================"
+          
+      - name: Upload reject files
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: reject-files
+          path: reject_files/
+          if-no-files-found: ignore
+          
+      - name: Comment on PR
+        if: github.event_name == 'pull_request'
+        env:
+          GH_TOKEN: ${{ steps.app-token.outputs.token }}
+          PR_NUM: ${{ github.event.pull_request.number }}
+        run: |
+          BRANCH_NAME="port/${PR_NUM}-to-upstream"
+          
+          # Check if reject files exist
+          if [ -d "reject_files/pr-${PR_NUM}" ]; then
+            # Create comment about reject files and manual attention needed
+            COMMENT="🔄 Ported changes to branch [\`$BRANCH_NAME\`](https://github.com/grafana/opentelemetry-ebpf-instrumentation/tree/$BRANCH_NAME) in grafana/opentelemetry-ebpf-instrumentation.
+
+⚠️ Some changes couldn't be applied automatically. See the workflow run for details and download the reject files artifact."
+          else
+            # Create success comment
+            COMMENT="✅ Successfully ported changes to branch [\`$BRANCH_NAME\`](https://github.com/grafana/opentelemetry-ebpf-instrumentation/tree/$BRANCH_NAME) in grafana/opentelemetry-ebpf-instrumentation."
+          fi
+          
+          # Add the comment to the PR
+          gh pr comment $PR_NUM --repo grafana/beyla --body "$COMMENT"
