--- a/.github/workflows/port-to-upstream.yml
+++ b/.github/workflows/port-to-upstream.yml
@@ -61,8 +61,8 @@ jobs:
         run: |
           echo "Running PR processing..."
           
-          # Find labeled PRs - use explicit output format to avoid parsing issues
-          LABELED_PRS=$(gh pr list --repo grafana/beyla --label "port-to-otel-ebpf-inst" --json number,title,url,baseRefName,state)
+          # Find ALL labeled PRs including closed ones
+          LABELED_PRS=$(gh pr list --repo grafana/beyla --label "port-to-otel-ebpf-inst" --state all --json number,title,url,baseRefName,state,mergedAt --limit 100)
           echo "Found labeled PRs JSON:"
           echo "$LABELED_PRS" | jq '.'
           
@@ -70,7 +70,7 @@ jobs:
           PR_COUNT=$(echo "$LABELED_PRS" | jq length)
           echo "Number of PRs to process: $PR_COUNT"
           
-          # Process each labeled PR (with explicit iteration)
+          # Process each labeled PR
           for i in $(seq 0 $((PR_COUNT-1))); do
             PR_JSON=$(echo "$LABELED_PRS" | jq ".[$i]")
             PR_NUM=$(echo "$PR_JSON" | jq -r '.number')
@@ -78,29 +78,36 @@ jobs:
             PR_URL=$(echo "$PR_JSON" | jq -r '.url')
             PR_BASE_BRANCH=$(echo "$PR_JSON" | jq -r '.baseRefName')
             PR_STATE=$(echo "$PR_JSON" | jq -r '.state')
+            PR_MERGED=$(echo "$PR_JSON" | jq -r '.mergedAt != null')
             
             echo "================================================================"
-            echo "Processing PR #${PR_NUM}: ${PR_TITLE} (${PR_STATE})"
+            echo "Processing PR #${PR_NUM}: ${PR_TITLE} (${PR_STATE}, Merged: ${PR_MERGED})"
             echo "================================================================"
             
-            # Skip closed PRs
-            if [ "$PR_STATE" == "CLOSED" ]; then
-              echo "PR is closed. Skipping."
+            # Only process merged PRs
+            if [ "$PR_MERGED" != "true" ]; then
+              echo "PR #${PR_NUM} is not merged. Skipping."
               continue
             fi
             
-            # Try fetching the PR branch
-            echo "Fetching PR branch..."
-            if ! git fetch origin pull/${PR_NUM}/head:pr-${PR_NUM} 2>/dev/null; then
-              echo "Failed to fetch PR #${PR_NUM}. Continuing with next PR."
+            # Try fetching the PR branch or the merge commit
+            echo "Fetching merged PR #${PR_NUM}..."
+            
+            # Get PR details including merge commit
+            PR_DETAILS=$(gh pr view ${PR_NUM} --repo grafana/beyla --json mergeCommit)
+            MERGE_SHA=$(echo "$PR_DETAILS" | jq -r '.mergeCommit.oid')
+            
+            if [ -n "$MERGE_SHA" ] && [ "$MERGE_SHA" != "null" ]; then
+              git fetch origin ${MERGE_SHA}
+              git checkout -b pr-${PR_NUM} ${MERGE_SHA}
+            else
+              echo "Could not find merge commit for PR #${PR_NUM}. Skipping."
               continue
             fi
             
-            # Checkout the PR branch
-            git checkout pr-${PR_NUM}
-            
-            # Get base/head SHAs
-            BASE_SHA=$(git merge-base origin/${PR_BASE_BRANCH} pr-${PR_NUM} 2>/dev/null || git merge-base origin/main pr-${PR_NUM})
+            # Get base/head SHAs for merged PR
+            # For merged PRs, compare with the first parent (target branch state before merge)
+            BASE_SHA=$(git rev-parse HEAD^1)
             HEAD_SHA=$(git rev-parse HEAD)
             
             echo "Base SHA: $BASE_SHA"
