--- a/.github/workflows/helm-release.yml
+++ b/.github/workflows/helm-release.yml
@@ -4,7 +4,8 @@ on:
 
 # Set restrictive permissions at workflow level
 permissions:
-  contents: read
+  contents: write
+  packages: write
 
 jobs:
   release-beyla-helm-chart:
