--- a/.github/workflows/helm-release.yml
+++ b/.github/workflows/helm-release.yml
@@ -2,14 +2,13 @@ name: Release Helm chart
 on:
   workflow_dispatch:
 
-# Set restrictive permissions at workflow level
-permissions:
-  contents: write
-  packages: write
-
 jobs:
   release-beyla-helm-chart:
-    uses: grafana/helm-charts/.github/workflows/update-helm-repo.yaml@87cb2cd95f44387e010aa49c22466dd6d86a2ae9 # main
+    uses: grafana/helm-charts/.github/workflows/update-helm-repo.yaml@64b1c8260d69a9b1d9a186df25c51358b92f7662
+    permissions:
+      contents: "write"
+      id-token: "write"
+      packages: "write"
     with:
       charts_dir: charts/beyla
       cr_configfile: .github/configs/cr.yml
