Move "Survey" configuration section to Globs instead of Regex (#1993)
* generified RegexpAttr y GlobAttr

* Fix integration tests config

* restore docker stop

--- a/test/integration/k8s/manifests/06-beyla-daemonset.yml
+++ b/test/integration/k8s/manifests/06-beyla-daemonset.yml
@@ -16,7 +16,7 @@ data:
     log_level: debug
     discovery:
       survey:
-        - k8s_deployment_name: .
+        - k8s_deployment_name: "*"
       services:
         # name and namespace will be automatically set from the K8s metadata
         - k8s_deployment_name: (otherinstance|testserver)
