--- a/test/integration/docker-compose-ruby.yml
+++ b/test/integration/docker-compose-ruby.yml
@@ -12,6 +12,18 @@ services:
       otelcol:
         condition: service_started
 
+  nginx:
+    image: nginx:latest
+    container_name: nginx_server
+    ports:
+      - "8443:443" # Expose TLS port
+    volumes:
+      - ./components/rubytestserver/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./components/rubytestserver/nginx/cert.pem:/etc/nginx/cert.pem:ro
+      - ./components/rubytestserver/nginx/key.pem:/etc/nginx/key.pem:ro
+    depends_on:
+      - testserver
+      
   autoinstrumenter:
     build:
       context: ../..
@@ -25,19 +37,19 @@ services:
       - ../../testoutput/run-ruby:/var/run/beyla
     image: hatest-autoinstrumenter
     privileged: true # in some environments (not GH Pull Requests) you can set it to false and then cap_add: [ SYS_ADMIN ]
-    network_mode: "service:testserver"
-    pid: "service:testserver"
+    network_mode: "host"
+    pid: "host"
     environment:
       GOCOVERDIR: "/coverage"
-      BEYLA_TRACE_PRINTER: "counter"
+      BEYLA_TRACE_PRINTER: "text"
       BEYLA_OPEN_PORT: "${BEYLA_OPEN_PORT}"
       BEYLA_DISCOVERY_POLL_INTERVAL: 500ms
       BEYLA_EXECUTABLE_NAME: "${BEYLA_EXECUTABLE_NAME}"
       BEYLA_SERVICE_NAMESPACE: "integration-test"
       BEYLA_METRICS_INTERVAL: "10ms"
       BEYLA_BPF_BATCH_TIMEOUT: "10ms"
-      BEYLA_LOG_LEVEL: "DEBUG"
-      BEYLA_BPF_DEBUG: "TRUE"
+      #BEYLA_LOG_LEVEL: "DEBUG"
+      #BEYLA_BPF_DEBUG: "TRUE"
       BEYLA_HOSTNAME: "beyla"
     depends_on:
       testserver:
@@ -56,7 +68,7 @@ services:
     volumes:
       - ./configs/:/etc/otelcol-config
     ports:
-      - "4317"          # OTLP over gRPC receiver
+      - "4317:4317"     # OTLP over gRPC receiver
       - "4318:4318"     # OTLP over HTTP receiver
       - "9464"          # Prometheus exporter
       - "8888"          # metrics endpoint
@@ -76,3 +88,14 @@ services:
       - ./configs/:/etc/prometheus
     ports:
       - "9090:9090"
+
+  # Jaeger for Traces
+  jaeger:
+    image: jaegertracing/all-in-one:1.57
+    ports:
+      - "16686:16686" # Query frontend
+      - "4417:4317"        # OTEL GRPC traces collector
+      - "4418:4318"        # OTEL HTTP traces collector
+    environment:
+      - COLLECTOR_OTLP_ENABLED=true
+      - LOG_LEVEL=debug
