Deprecating discovery services

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -9,6 +9,13 @@ issues:
       linters:
         - revive
       text: indent-error-flow
+
+    # exclude deprecated API usage errors. If we deprecate some properties is because we don't want to remove them
+    # (hide/undocument them, but keep supporting them until the next major version)
+    - path: .*
+      linters:
+        - staticcheck
+      text: "SA1019:"
 run:
   go: "1.24"
   build-tags:
