--- a/test/integration/configs/instrumenter-config-elixir.yml
+++ b/test/integration/configs/instrumenter-config-elixir.yml
@@ -9,7 +9,7 @@ attributes:
     "*":
       include: ["*"]
 discovery:
-  services:
+  instrument:
     - open_ports: 4000
       namespace: integration-test
-      containers_only: true      
+      containers_only: true
