--- a/test/integration/configs/instrumenter-config-http2.yml
+++ b/test/integration/configs/instrumenter-config-http2.yml
@@ -8,14 +8,14 @@ prometheus_export:
 otel_traces_export:
   endpoint: http://jaeger:4318
 discovery:
-  services:
+  instrument:
     - namespace: http2-go
       name: client
-      exe_path: http2client
+      exe_path: "*/http2client"
       containers_only: true
     - namespace: http2-go
       name: server
-      exe_path: http2srv
+      exe_path: "*/http2srv"
       containers_only: true
 attributes:
   select:
