--- a/test/integration/configs/instrumenter-config-multiexec-host.yml
+++ b/test/integration/configs/instrumenter-config-multiexec-host.yml
@@ -7,16 +7,16 @@ otel_metrics_export:
 otel_traces_export:
   endpoint: http://127.0.0.1:4318
 discovery:
-  services:
+  instrument:
     - namespace: just-will-be-ignored
       name: another-service
-      exe_path: asdflkjasdf
+      exe_path: "*/asdflkjasdf"
     - namespace: initial-set
       name: some-server
       open_ports: 18080
-      exe_path: dupe # choose only the dupe.* process that uses port 18080
+      exe_path: "*dupe*" # choose only the dupe.* process that uses port 18080
     - namespace: initial-set
-      exe_path: ((testserver)|(rename1))
+      exe_path: "*/{testserver,rename1}"
     - namespace: multi-k
       name: rust-service-ssl
       open_ports: 8490
