--- a/test/integration/k8s/manifests/06-instrumented-grpc-client-prom.template.yml
+++ b/test/integration/k8s/manifests/06-instrumented-grpc-client-prom.template.yml
@@ -66,8 +66,8 @@ spec:
           value: "500ms"
         - name: BEYLA_TRACE_PRINTER
           value: "counter"
-        - name: BEYLA_EXECUTABLE_NAME
-          value: "grpcpinger"
+        - name: OTEL_GO_AUTO_TARGET_EXE
+          value: "*grpcpinger"
         - name: BEYLA_METRICS_INTERVAL
           value: "10ms"
         - name: BEYLA_BPF_BATCH_TIMEOUT
