--- a/test/integration/docker-compose-1.17.yml
+++ b/test/integration/docker-compose-1.17.yml
@@ -35,7 +35,7 @@ services:
       BEYLA_OTEL_METRICS_FEATURES: "application,application_span"
       BEYLA_OPEN_PORT: "${BEYLA_OPEN_PORT}"
       BEYLA_DISCOVERY_POLL_INTERVAL: 500ms
-      OTEL_GO_AUTO_TARGET_EXE: "${BEYLA_EXECUTABLE_NAME}"
+      OTEL_GO_AUTO_TARGET_EXE: "${OTEL_GO_AUTO_TARGET_EXE}"
       BEYLA_SERVICE_NAMESPACE: "integration-test"
       BEYLA_METRICS_INTERVAL: "10ms"
       BEYLA_BPF_BATCH_TIMEOUT: "10ms"
