--- a/docs/sources/configure/resources/instrumenter-config.yml
+++ b/docs/sources/configure/resources/instrumenter-config.yml
@@ -1,4 +1,6 @@
-open_port: 443
+discovery:
+  instrument:
+    - open_ports: 443
 otel_metrics_export:
   endpoint: http://localhost:4318
 otel_traces_export:
