Fix wrong configuration

--- a/test/integration/k8s/manifests/06-beyla-daemonset-disable-informers.yml
+++ b/test/integration/k8s/manifests/06-beyla-daemonset-disable-informers.yml
@@ -20,7 +20,7 @@ data:
     log_level: debug
     discovery:
       instrument:
-        - k8s_pod_name: testserver
+        - k8s_pod_name: testserver*
     routes:
       patterns:
         - /pingpong
