Deprecating "discovery > services" and adding the new "discovery > instrument" section (#2012)
* Deprecating discovery services

* Updating documentation

* Fixing vale

* Make vale and linters happy

* Fix doc linter

* Fix wrong configuration

--- a/test/integration/k8s/manifests/06-beyla-daemonset-disable-informers.yml
+++ b/test/integration/k8s/manifests/06-beyla-daemonset-disable-informers.yml
@@ -19,8 +19,8 @@ data:
     trace_printer: text
     log_level: debug
     discovery:
-      services:
-        - k8s_pod_name: testserver
+      instrument:
+        - k8s_pod_name: testserver*
     routes:
       patterns:
         - /pingpong
