--- a/.github/workflows/workflow_integration_tests_vm.yml
+++ b/.github/workflows/workflow_integration_tests_vm.yml
@@ -18,6 +18,10 @@ on:
         default: 60
 jobs:
   test:
+    permissions:
+      contents: read
+      # required for CODECOV token
+      id-token: write
     name: test
     runs-on: ubuntu-latest
     strategy:
