--- a/.github/workflows/pull_request_k8s_integration_tests.yml
+++ b/.github/workflows/pull_request_k8s_integration_tests.yml
@@ -18,6 +18,8 @@ jobs:
     permissions:
       contents: read
       pull-requests: write
+      # required for CODECOV token
+      id-token: write
     strategy:
       matrix:
         go: [ '1.24' ]
