Fix deprecated tests

--- a/test/integration/configs/instrumenter-config-other-grpc.yml
+++ b/test/integration/configs/instrumenter-config-other-grpc.yml
@@ -9,9 +9,6 @@ discovery:
 routes:
   patterns:
     - /factorial/:rnd
-  ignored_patterns:
-    - /metrics
-  ignore_mode: traces
   unmatched: path
 otel_metrics_export:
   endpoint: http://otelcol:4318
@@ -21,3 +18,7 @@ attributes:
   select:
     "*":
       include: ["*"]
+filter:
+  application:
+    http_route:
+      not_match: "/metrics"
