--- a/test/integration/configs/instrumenter-config-grpc-export.yml
+++ b/test/integration/configs/instrumenter-config-grpc-export.yml
@@ -1,9 +1,6 @@
 routes:
   patterns:
     - /basic/:rnd
-  ignored_patterns:
-    - /metrics
-  ignore_mode: traces
   unmatched: path
 otel_metrics_export:
   endpoint: http://otelcol:4317
@@ -15,3 +12,7 @@ attributes:
   select:
     "*":
       include: ["*"]
+filter:
+  application:
+    http_route:
+      not_match: "/metrics"
