--- a/test/integration/configs/instrumenter-config-no-route.yml
+++ b/test/integration/configs/instrumenter-config-no-route.yml
@@ -1,6 +1,4 @@
 routes:
-  ignored_patterns:
-    - /metrics
   unmatched: heuristic
 otel_metrics_export:
   endpoint: http://otelcol:4318
@@ -10,3 +8,7 @@ attributes:
   select:
     "*":
       include: ["*"]
+filter:
+  application:
+    http_route:
+      not_match: "/metrics"
