--- a/test/integration/configs/instrumenter-config-no-route.yml
+++ b/test/integration/configs/instrumenter-config-no-route.yml
@@ -1,4 +1,6 @@
 routes:
+  ignored_patterns:
+    - /metrics
   unmatched: heuristic
 otel_metrics_export:
   endpoint: http://otelcol:4318
@@ -8,7 +10,3 @@ attributes:
   select:
     "*":
       include: ["*"]
-filter:
-  application:
-    http_route:
-      not_match: "/metrics"
