--- a/charts/beyla/values.yaml
+++ b/charts/beyla/values.yaml
@@ -61,10 +61,21 @@ podSecurityContext: {}
 # -- If set to false, deploys an unprivileged / less privileged setup.
 privileged: true
 
+# -- Enables context propagation support. When enabled, requires hostNetwork and /sys/fs/cgroup mount.
+# This enables distributed tracing context propagation at the network level.
+# When enabled, the following changes are applied:
+# - hostNetwork: true is set (for network-level context propagation)
+# - /sys/fs/cgroup is mounted from the host (to monitor newly created sockets)
+# - NET_ADMIN capability is added (to inject HTTP and TCP context propagation information)
+# Note: This feature generally requires kernel 5.17 or newer for BPF loops support.
+contextPropagation:
+  enabled: false
+
 # -- Extra capabilities for unprivileged / less privileged setup.
 extraCapabilities: []
   # - SYS_RESOURCE       # <-- pre 5.11 only. Allows Beyla to increase the amount of locked memory.
   # - SYS_ADMIN          # <-- Required for Go application trace context propagation, or if kernel.perf_event_paranoid >= 3 on Debian distributions.
+  # - NET_ADMIN          # <-- Required to inject HTTP and TCP context propagation information.
 
 # -- Security context for privileged setup.
 securityContext:
